--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap');
 
+:root {
+    --softCyan: hsl(174, 77%, 80%);
+    --strongCyan: hsl(174, 86%, 45%);
+    --lightGrayishRed: hsl(14, 92%, 95%);
+    --lightRed: hsl(15, 100%, 70%);
+    --paleBlue: hsl(226, 100%, 87%);
+    --white: hsl(0, 0%, 100%);
+    --veryPaleBlue: hsl(230, 100%, 99%);
+    --lightGrayishBlue: hsl(224, 65%, 95%);
+    --lightGrayishBlue2: hsl(223, 50%, 87%);
+    --grayishBlue: hsl(225, 20%, 60%);
+    --darkDesaturatedBlue: hsl(227, 35%, 25%);
+
+    --fontFamily: 'Manrope', sans-serif;
+}
+
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
