--- a/src/Components/header/Header.css
+++ b/src/Components/header/Header.css
@@ -2,7 +2,7 @@
     font-family: var(--fontFamily);
     text-align: center;
     padding: 5rem 0.5rem 3rem 0.5rem;
-    color: var(--grayishBlue);
+    /* color: var(--grayishBlue); */
 
     background-image: url('../../Images/pattern-circles.svg');
     background-position: center;
@@ -13,5 +13,5 @@
 .header > h2 {
     font-weight: 800;
     font-size: 1.7rem;
-    color: var(--darkDesaturatedBlue);
+    /* color: var(--darkDesaturatedBlue); */
 }
